--- a/templates/web/det.html
+++ b/templates/web/det.html
@@ -10,7 +10,7 @@
     <li>{{ pr.name }}</li>
     {% endif %}
     {% if pr.price %}
-    <li>{{ pr.price }}</li>
+    <li>{{ pr.price }} грн</li>
     {% endif %}
     {% if pr.img.url %}
     <li><img src="{{ pr.img.url }}" width="200px" height="200px"></li>
