--- a/templates/web/det.html
+++ b/templates/web/det.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Detail</title>
+    <title>Detail product</title>
 </head>
 <body>
 <ul>
