--- a/templates/order/create.html
+++ b/templates/order/create.html
@@ -1,11 +1,17 @@
-{% block content %}
-    <h1>Checkout</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Order</title>
+</head>
+<body>
+    <h1>Make order</h1>
     <div class="order-info"></div>
     <form action="." method="post" class="order-form">
         {{ form.as_p }}
         <p><input type="submit" value="Place order"></p>
         {% csrf_token %}
     </form>
-{% endblock %}
-
+</body>
+</html>
 
