--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,19 +1,19 @@
 {% load crispy_forms_filters %}
 {% block title_page %}
-  <title>Авторизация на сайте</title>
+  <title>Authorization on the site</title>
 {% endblock title_page %}
 
 {% block content %}
 <div class="container" style="margin-top: 5%;">
     <div class="form-section">
-        <h2>Авторизация</h2>
+        <h2>Authorization</h2>
         <form method="POST">
             {% csrf_token %}
             {{ form|crispy }}
-            <button type="submit" class="btn btn-ouline-warning">Войти</button>
+            <button type="submit" class="btn btn-ouline-warning">To come in</button>
         </form>
         <hr>
-        Нету профиля? <a href="{% url 'reg' %}">Зарегистрироваться</a>
+        No profile? <a href="{% url 'reg' %}">Register</a>
     </div>
 </div>
 {% endblock %}
