--- a/templates/users/registration.html
+++ b/templates/users/registration.html
@@ -1,19 +1,19 @@
 {% load crispy_forms_tags %}
 {% block title_page %}
-<title>Регистрация на сайте</title>
+<title>registration on the website</title>
 {% endblock title_page %}
 
 {% block content %}
 <div class="container" style="margin-top: 5%;">
     <div class="form-section">
-        <h2>Регистрация</h2>
+        <h2>registration</h2>
         <form method="POST">
             {% csrf_token %}
             {{ form|crispy }}
-            <button type="submit" class="btn btn-ouline-warning">Зарегистрироваться</button>
+            <button type="submit" class="btn btn-ouline-warning">Register</button>
         </form>
         <hr>
-        Уже зарегистрированы? <a href="{% url 'login' %}">Войти</a>
+        Already registered? <a href="{% url 'login' %}">Login</a>
     </div>
 </div>
 {% endblock %}
